// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`provision/CreateRole render create role 1`] = `
<body>
  <div>
    <section
      class="css-doq0dk"
    >
      <div
        class="actiontech-page-header-namespace fixed-style css-1xspr0w"
      >
        <div
          class="title"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svg
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.219 7.333h8.114v1.334H5.22l3.576 3.576-.943.942L2.667 8l5.185-5.185.943.942z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span>
              返回至角色列表
            </span>
          </button>
        </div>
        <div
          class="extra"
        >
          <div
            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
          >
            <div
              class="ant-space-item"
              style="margin-right: 8px;"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                type="button"
              >
                <span>
                  重 置
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                type="button"
              >
                <span>
                  提 交
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="lazy-load-wrapper lazy-load-wrapper-show css-952l0m"
      >
        <form
          class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw hasTopHeader css-19jfn7e"
        >
          <section
            class="css-bspaai"
          >
            <h3
              class="ant-typography css-p50odb css-dev-only-do-not-override-txh9fw"
            >
              创建角色
            </h3>
            <div
              class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
                >
                  <label
                    class="ant-form-item-required ant-form-item-no-colon"
                    for="dbServiceID"
                    title="数据源"
                  >
                    数据源
                  </label>
                </div>
                <div
                  class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        aria-required="true"
                        class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow ant-select-disabled"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <span
                            class="ant-select-selection-search"
                          >
                            <input
                              aria-activedescendant="dbServiceID_list_0"
                              aria-autocomplete="list"
                              aria-controls="dbServiceID_list"
                              aria-expanded="false"
                              aria-haspopup="listbox"
                              aria-owns="dbServiceID_list"
                              aria-required="true"
                              autocomplete="off"
                              class="ant-select-selection-search-input"
                              disabled=""
                              id="dbServiceID"
                              readonly=""
                              role="combobox"
                              style="opacity: 0;"
                              type="search"
                              unselectable="on"
                              value=""
                            />
                          </span>
                          <span
                            class="ant-select-selection-item"
                            title="oracle-1 (10.186.62.3:33061)"
                          >
                            oracle-1 (10.186.62.3:33061)
                          </span>
                        </div>
                        <span
                          aria-hidden="true"
                          class="ant-select-arrow"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down ant-select-suffix"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-hidden"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <input
                        class="ant-input css-dev-only-do-not-override-ywkr0o basic-input-wrapper css-1pd1cd5"
                        id="dbType"
                        placeholder="请输入{{name}}"
                        type="text"
                        value="Oracle"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
                >
                  <label
                    class="ant-form-item-required ant-form-item-no-colon"
                    for="roleName"
                    title="角色名称"
                  >
                    角色名称
                  </label>
                </div>
                <div
                  class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <input
                        aria-required="true"
                        class="ant-input ant-input-status-success css-dev-only-do-not-override-ywkr0o basic-input-wrapper css-1pd1cd5"
                        id="roleName"
                        placeholder="请输入{{name}}"
                        type="text"
                        value="test_role"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
                >
                  <label
                    class="ant-form-item-no-colon"
                    for="dbRoles"
                    title="角色"
                  >
                    角色
                  </label>
                </div>
                <div
                  class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-multiple ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <div
                            class="ant-select-selection-overflow"
                          >
                            <div
                              class="ant-select-selection-overflow-item"
                              style="opacity: 1;"
                            >
                              <span
                                class="ant-select-selection-item"
                                title="role1"
                              >
                                <span
                                  class="ant-select-selection-item-content"
                                >
                                  role1
                                </span>
                                <span
                                  aria-hidden="true"
                                  class="ant-select-selection-item-remove"
                                  style="user-select: none;"
                                  unselectable="on"
                                >
                                  <span
                                    aria-label="close"
                                    class="anticon anticon-close"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      data-icon="close"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </span>
                            </div>
                            <div
                              class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                              style="opacity: 1;"
                            >
                              <div
                                class="ant-select-selection-search"
                                style="width: 0px;"
                              >
                                <input
                                  aria-activedescendant="dbRoles_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="dbRoles_list"
                                  aria-expanded="false"
                                  aria-haspopup="listbox"
                                  aria-owns="dbRoles_list"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="dbRoles"
                                  readonly=""
                                  role="combobox"
                                  style="opacity: 0;"
                                  type="search"
                                  unselectable="on"
                                  value=""
                                />
                                <span
                                  aria-hidden="true"
                                  class="ant-select-selection-search-mirror"
                                >
                                   
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                        <span
                          aria-hidden="true"
                          class="ant-select-arrow"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="down"
                            class="anticon anticon-down ant-select-suffix"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="down"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                              />
                            </svg>
                          </span>
                        </span>
                        <span
                          aria-hidden="true"
                          class="ant-select-clear"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <svg
                            fill="currentColor"
                            height="14"
                            viewBox="0 0 14 14"
                            width="14"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="m7 6.175 2.887-2.887.825.825L7.825 7l2.887 2.888-.825.824L7 7.825l-2.888 2.887-.824-.824L6.175 7 3.288 4.113l.824-.825z"
                            />
                          </svg>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-has-success"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
                >
                  <label
                    class="ant-form-item-no-colon"
                    for="systemPrivileges"
                    title="系统权限"
                  >
                    系统权限
                  </label>
                </div>
                <div
                  class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <div
                        class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-multiple ant-select-show-arrow ant-select-open ant-select-show-search"
                      >
                        <div
                          class="ant-select-selector"
                        >
                          <div
                            class="ant-select-selection-overflow"
                          >
                            <div
                              class="ant-select-selection-overflow-item"
                              style="opacity: 1;"
                            >
                              <span
                                class="ant-select-selection-item"
                                title="FILE"
                              >
                                <span
                                  class="ant-select-selection-item-content"
                                >
                                  FILE
                                </span>
                                <span
                                  aria-hidden="true"
                                  class="ant-select-selection-item-remove"
                                  style="user-select: none;"
                                  unselectable="on"
                                >
                                  <span
                                    aria-label="close"
                                    class="anticon anticon-close"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      data-icon="close"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </span>
                            </div>
                            <div
                              class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                              style="opacity: 1;"
                            >
                              <div
                                class="ant-select-selection-search"
                                style="width: 0px;"
                              >
                                <input
                                  aria-activedescendant="systemPrivileges_list_0"
                                  aria-autocomplete="list"
                                  aria-controls="systemPrivileges_list"
                                  aria-expanded="true"
                                  aria-haspopup="listbox"
                                  aria-owns="systemPrivileges_list"
                                  autocomplete="off"
                                  class="ant-select-selection-search-input"
                                  id="systemPrivileges"
                                  role="combobox"
                                  style=""
                                  type="search"
                                  value=""
                                />
                                <span
                                  aria-hidden="true"
                                  class="ant-select-selection-search-mirror"
                                >
                                   
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                        <span
                          aria-hidden="true"
                          class="ant-select-arrow"
                          style="user-select: none;"
                          unselectable="on"
                        >
                          <span
                            aria-label="search"
                            class="anticon anticon-search ant-select-suffix"
                            role="img"
                          >
                            <svg
                              aria-hidden="true"
                              data-icon="search"
                              fill="currentColor"
                              focusable="false"
                              height="1em"
                              viewBox="64 64 896 896"
                              width="1em"
                            >
                              <path
                                d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-form-item-control-input"
                  >
                    <div
                      class="ant-form-item-control-input-content"
                    >
                      <section
                        class="css-1ov62z1"
                      >
                        <section
                          class="css-c4iiqr"
                        >
                          <span
                            class="privileges-field-title"
                          >
                            对象权限概览
                          </span>
                          <div
                            class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                          >
                            <div
                              class="ant-space-item"
                              style="margin-right: 8px;"
                            >
                              <button
                                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-dangerous basic-button-wrapper css-geipcv"
                                disabled=""
                                type="button"
                              >
                                <span>
                                  清除所有对象权限
                                </span>
                              </button>
                            </div>
                            <div
                              class="ant-space-item"
                            >
                              <button
                                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                                type="button"
                              >
                                <span>
                                  添加对象权限
                                </span>
                              </button>
                            </div>
                          </div>
                        </section>
                        <div
                          class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
                        >
                          <div
                            class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
                          >
                            <div
                              class="ant-spin-container"
                            >
                              <div
                                class="ant-table ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                              >
                                <div
                                  class="ant-table-container"
                                >
                                  <div
                                    class="ant-table-content"
                                    style="overflow-x: auto; overflow-y: hidden;"
                                  >
                                    <table
                                      style="min-width: 100%; table-layout: auto;"
                                    >
                                      <colgroup>
                                        <col />
                                        <col />
                                        <col
                                          style="width: 164px;"
                                        />
                                      </colgroup>
                                      <thead
                                        class="ant-table-thead"
                                      >
                                        <tr>
                                          <th
                                            class="ant-table-cell"
                                            scope="col"
                                          >
                                            数据对象
                                          </th>
                                          <th
                                            class="ant-table-cell"
                                            scope="col"
                                          >
                                            操作权限
                                          </th>
                                          <th
                                            class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                            scope="col"
                                            style="position: sticky; right: 0px;"
                                          >
                                            操作
                                          </th>
                                        </tr>
                                      </thead>
                                      <tbody
                                        class="ant-table-tbody"
                                      >
                                        <tr
                                          aria-hidden="true"
                                          class="ant-table-measure-row"
                                          style="height: 0px; font-size: 0px;"
                                        >
                                          <td
                                            style="padding: 0px; border: 0px; height: 0px;"
                                          >
                                            <div
                                              style="height: 0px; overflow: hidden;"
                                            >
                                               
                                            </div>
                                          </td>
                                          <td
                                            style="padding: 0px; border: 0px; height: 0px;"
                                          >
                                            <div
                                              style="height: 0px; overflow: hidden;"
                                            >
                                               
                                            </div>
                                          </td>
                                          <td
                                            style="padding: 0px; border: 0px; height: 0px;"
                                          >
                                            <div
                                              style="height: 0px; overflow: hidden;"
                                            >
                                               
                                            </div>
                                          </td>
                                        </tr>
                                        <tr
                                          class="ant-table-placeholder"
                                        >
                                          <td
                                            class="ant-table-cell"
                                            colspan="3"
                                          >
                                            <div
                                              class="ant-table-expanded-row-fixed"
                                              style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                                            />
                                          </td>
                                        </tr>
                                      </tbody>
                                    </table>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </section>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </section>
        </form>
      </div>
    </section>
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-select-dropdown-hidden css-dev-only-do-not-override-v9sov3 ant-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: 0px; top: 0px; box-sizing: border-box; min-width: 0; width: 0px; pointer-events: none;"
    >
      <div>
        <div
          id="dbRoles_list"
          role="listbox"
          style="height: 0px; width: 0px; overflow: hidden;"
        >
          <div
            aria-label="role1"
            aria-selected="true"
            id="dbRoles_list_0"
            role="option"
          >
            123
          </div>
          <div
            aria-label="role2"
            aria-selected="false"
            id="dbRoles_list_1"
            role="option"
          >
            1234
          </div>
        </div>
        <div
          class="rc-virtual-list"
          style="position: relative;"
        >
          <div
            class="rc-virtual-list-holder"
            style="max-height: 256px; overflow-y: hidden;"
          >
            <div>
              <div
                class="rc-virtual-list-holder-inner"
                style="display: flex; flex-direction: column;"
              >
                <div
                  aria-selected="true"
                  class="ant-select-item ant-select-item-option ant-select-item-option-active ant-select-item-option-selected"
                  title="role1"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    role1
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="check"
                      class="anticon anticon-check"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="check"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="role2"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    role2
                  </div>
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  title="role3"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    role3
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="rc-virtual-list-scrollbar"
            style="width: 8px; top: 0px; bottom: 0px; right: 0px; position: absolute; display: none;"
          >
            <div
              class="rc-virtual-list-scrollbar-thumb"
              style="width: 100%; height: 128px; top: 0px; left: 0px; position: absolute; background: rgba(0, 0, 0, 0.5); border-radius: 99px; cursor: pointer; user-select: none;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up css-dev-only-do-not-override-v9sov3 ant-select-dropdown-placement-bottomLeft"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box; min-width: 0; width: 0px;"
    >
      <div>
        <div
          id="systemPrivileges_list"
          role="listbox"
          style="height: 0px; width: 0px; overflow: hidden;"
        >
          <div
            aria-label="CREATE_USER"
            aria-selected="false"
            id="systemPrivileges_list_0"
            role="option"
          >
            600033
          </div>
          <div
            aria-label="FILE"
            aria-selected="true"
            id="systemPrivileges_list_1"
            role="option"
          >
            600027
          </div>
        </div>
        <div
          class="rc-virtual-list"
          style="position: relative;"
        >
          <div
            class="rc-virtual-list-holder"
            style="max-height: 256px; overflow-y: hidden;"
          >
            <div>
              <div
                class="rc-virtual-list-holder-inner"
                style="display: flex; flex-direction: column;"
              >
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option ant-select-item-option-active"
                  scope="Service,Instance"
                  title="CREATE_USER"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    CREATE_USER
                  </div>
                </div>
                <div
                  aria-selected="true"
                  class="ant-select-item ant-select-item-option ant-select-item-option-selected"
                  scope="Service,Instance"
                  title="FILE"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    FILE
                  </div>
                  <span
                    aria-hidden="true"
                    class="ant-select-item-option-state"
                    style="user-select: none;"
                    unselectable="on"
                  >
                    <span
                      aria-label="check"
                      class="anticon anticon-check"
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="check"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M912 190h-69.9c-9.8 0-19.1 4.5-25.1 12.2L404.7 724.5 207 474a32 32 0 00-25.1-12.2H112c-6.7 0-10.4 7.7-6.3 12.9l273.9 347c12.8 16.2 37.4 16.2 50.3 0l488.4-618.9c4.1-5.1.4-12.8-6.3-12.8z"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  scope="Service,Instance"
                  title="PROCESS"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    PROCESS
                  </div>
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  scope="Service,Instance"
                  title="RELOAD"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    RELOAD
                  </div>
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  scope="Service,Instance"
                  title="REPLICATION_CLIENT"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    REPLICATION_CLIENT
                  </div>
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  scope="Service,Instance"
                  title="REPLICATION_SLAVE"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    REPLICATION_SLAVE
                  </div>
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  scope="Service,Instance"
                  title="SHOW_DATABASES"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    SHOW_DATABASES
                  </div>
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  scope="Service,Instance"
                  title="SHUTDOWN"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    SHUTDOWN
                  </div>
                </div>
                <div
                  aria-selected="false"
                  class="ant-select-item ant-select-item-option"
                  scope="Service,Instance"
                  title="SUPER"
                >
                  <div
                    class="ant-select-item-option-content"
                  >
                    SUPER
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="rc-virtual-list-scrollbar"
            style="width: 8px; top: 0px; bottom: 0px; right: 0px; position: absolute; display: none;"
          >
            <div
              class="rc-virtual-list-scrollbar-thumb"
              style="width: 100%; height: 128px; top: 0px; left: 0px; position: absolute; background: rgba(0, 0, 0, 0.5); border-radius: 99px; cursor: pointer; user-select: none;"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="ant-drawer ant-drawer-right css-dev-only-do-not-override-txh9fw ant-drawer-open"
      tabindex="-1"
    >
      <div
        class="ant-drawer-mask"
      />
      <div
        aria-hidden="true"
        data-sentinel="start"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
      <div
        class="ant-drawer-content-wrapper"
        style="width: 720px;"
      >
        <div
          aria-modal="true"
          class="ant-drawer-content basic-drawer-wrapper css-1q29jje"
          role="dialog"
        >
          <div
            class="ant-drawer-wrapper-body"
          >
            <div
              class="ant-drawer-header"
            >
              <div
                class="ant-drawer-header-title"
              >
                <div
                  class="ant-drawer-title"
                >
                  添加对象权限
                </div>
              </div>
            </div>
            <div
              class="ant-drawer-body"
            >
              <div
                class="closed-icon-custom"
              >
                <span
                  aria-label="close"
                  class="anticon anticon-close"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="close"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
                    />
                  </svg>
                </span>
              </div>
              <form
                class="ant-form ant-form-vertical css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required"
                        for="data_operations"
                        title="选择对象权限"
                      >
                        选择对象权限
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            aria-required="true"
                            class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-multiple ant-select-show-arrow ant-select-show-search"
                          >
                            <div
                              class="ant-select-selector"
                            >
                              <div
                                class="ant-select-selection-overflow"
                              >
                                <div
                                  class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                                  style="opacity: 1;"
                                >
                                  <div
                                    class="ant-select-selection-search"
                                    style="width: 0px;"
                                  >
                                    <input
                                      aria-activedescendant="data_operations_list_0"
                                      aria-autocomplete="list"
                                      aria-controls="data_operations_list"
                                      aria-expanded="false"
                                      aria-haspopup="listbox"
                                      aria-owns="data_operations_list"
                                      aria-required="true"
                                      autocomplete="off"
                                      class="ant-select-selection-search-input"
                                      id="data_operations"
                                      readonly=""
                                      role="combobox"
                                      style="opacity: 0;"
                                      type="search"
                                      unselectable="on"
                                      value=""
                                    />
                                    <span
                                      aria-hidden="true"
                                      class="ant-select-selection-search-mirror"
                                    >
                                       
                                    </span>
                                  </div>
                                </div>
                              </div>
                              <span
                                class="ant-select-selection-placeholder"
                              >
                                请选择{{name}}
                              </span>
                            </div>
                            <span
                              aria-hidden="true"
                              class="ant-select-arrow"
                              style="user-select: none;"
                              unselectable="on"
                            >
                              <span
                                aria-label="down"
                                class="anticon anticon-down ant-select-suffix"
                                role="img"
                              >
                                <svg
                                  aria-hidden="true"
                                  data-icon="down"
                                  fill="currentColor"
                                  focusable="false"
                                  height="1em"
                                  viewBox="64 64 896 896"
                                  width="1em"
                                >
                                  <path
                                    d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                  />
                                </svg>
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item database-form-item css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class=""
                        title=""
                      >
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            选择数据库表
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <span
                              aria-label="info-circle"
                              class="anticon anticon-info-circle tooltips-default-icon"
                              role="img"
                            >
                              <svg
                                aria-hidden="true"
                                data-icon="info-circle"
                                fill="currentColor"
                                focusable="false"
                                height="1em"
                                viewBox="64 64 896 896"
                                width="1em"
                              >
                                <path
                                  d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                                />
                                <path
                                  d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                                />
                              </svg>
                            </span>
                          </div>
                        </div>
                      </label>
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            class="ant-row ant-row-no-wrap css-dev-only-do-not-override-txh9fw"
                          >
                            <div
                              class="ant-col css-dev-only-do-not-override-txh9fw"
                              style="flex: 0 0 180px; min-width: 0; margin-right: 12px;"
                            >
                              <div
                                aria-required="true"
                                class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                                data-testid="database-form-item-database-0"
                              >
                                <div
                                  class="ant-select-selector"
                                >
                                  <span
                                    class="ant-select-selection-search"
                                  >
                                    <input
                                      aria-activedescendant="data_objects_0_database_list_0"
                                      aria-autocomplete="list"
                                      aria-controls="data_objects_0_database_list"
                                      aria-expanded="false"
                                      aria-haspopup="listbox"
                                      aria-owns="data_objects_0_database_list"
                                      aria-required="true"
                                      autocomplete="off"
                                      class="ant-select-selection-search-input"
                                      id="data_objects_0_database"
                                      role="combobox"
                                      type="search"
                                      value=""
                                    />
                                  </span>
                                  <span
                                    class="ant-select-selection-placeholder"
                                  >
                                    *
                                  </span>
                                </div>
                                <span
                                  aria-hidden="true"
                                  class="ant-select-arrow"
                                  style="user-select: none;"
                                  unselectable="on"
                                >
                                  <span
                                    aria-label="down"
                                    class="anticon anticon-down ant-select-suffix"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      data-icon="down"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </div>
                            </div>
                            <div
                              class="ant-col css-dev-only-do-not-override-txh9fw"
                              style="flex: 1 1 auto; min-width: 0;"
                            >
                              <div
                                class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-multiple ant-select-show-arrow ant-select-show-search"
                                data-testid="database-form-item-schema-0"
                              >
                                <div
                                  class="ant-select-selector"
                                >
                                  <div
                                    class="ant-select-selection-overflow"
                                  >
                                    <div
                                      class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                                      style="opacity: 1;"
                                    >
                                      <div
                                        class="ant-select-selection-search"
                                        style="width: 0px;"
                                      >
                                        <input
                                          aria-activedescendant="data_objects_0_tables_list_0"
                                          aria-autocomplete="list"
                                          aria-controls="data_objects_0_tables_list"
                                          aria-expanded="false"
                                          aria-haspopup="listbox"
                                          aria-owns="data_objects_0_tables_list"
                                          autocomplete="off"
                                          class="ant-select-selection-search-input"
                                          id="data_objects_0_tables"
                                          readonly=""
                                          role="combobox"
                                          style="opacity: 0;"
                                          type="search"
                                          unselectable="on"
                                          value=""
                                        />
                                        <span
                                          aria-hidden="true"
                                          class="ant-select-selection-search-mirror"
                                        >
                                           
                                        </span>
                                      </div>
                                    </div>
                                  </div>
                                  <span
                                    class="ant-select-selection-placeholder"
                                  >
                                    *
                                  </span>
                                </div>
                                <span
                                  aria-hidden="true"
                                  class="ant-select-arrow"
                                  style="user-select: none;"
                                  unselectable="on"
                                >
                                  <span
                                    aria-label="down"
                                    class="anticon anticon-down ant-select-suffix"
                                    role="img"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      data-icon="down"
                                      fill="currentColor"
                                      focusable="false"
                                      height="1em"
                                      viewBox="64 64 896 896"
                                      width="1em"
                                    >
                                      <path
                                        d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                      />
                                    </svg>
                                  </span>
                                </span>
                              </div>
                            </div>
                            <div
                              class="ant-col css-dev-only-do-not-override-txh9fw"
                              style="flex: 0 0 48px; min-width: 0;"
                            />
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <button
                            class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default form-list-add add-object-button basic-button-wrapper css-1719g3l"
                            type="button"
                          >
                            <span
                              class="ant-btn-icon"
                            >
                              <svg
                                height="16"
                                viewBox="0 0 16 16"
                                width="16"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M7 13.667A6.667 6.667 0 1 1 7 .334a6.667 6.667 0 0 1 0 13.333m-.667-7.334H3.668v1.334h2.667v2.666h1.333V7.667h2.667V6.333H7.667V3.667H6.334z"
                                  fill="#4583FF"
                                />
                              </svg>
                            </span>
                            <span>
                              添加数据库表
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </form>
            </div>
            <div
              class="ant-drawer-footer"
            >
              <div
                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 8px;"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      关 闭
                    </span>
                  </button>
                </div>
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary object-privileges-modal-submit basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      保 存
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        aria-hidden="true"
        data-sentinel="end"
        style="width: 0px; height: 0px; overflow: hidden; outline: none; position: absolute;"
        tabindex="0"
      />
    </div>
  </div>
</body>
`;

exports[`provision/CreateRole render create role 2`] = `
<div
  class="ant-table-content"
  style="overflow-x: auto; overflow-y: hidden;"
>
  <table
    style="min-width: 100%; table-layout: auto;"
  >
    <colgroup>
      <col />
      <col />
      <col
        style="width: 164px;"
      />
    </colgroup>
    <thead
      class="ant-table-thead"
    >
      <tr>
        <th
          class="ant-table-cell"
          scope="col"
        >
          数据对象
        </th>
        <th
          class="ant-table-cell"
          scope="col"
        >
          操作权限
        </th>
        <th
          class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
          scope="col"
          style="position: sticky; right: 0px;"
        >
          操作
        </th>
      </tr>
    </thead>
    <tbody
      class="ant-table-tbody"
    >
      <tr
        aria-hidden="true"
        class="ant-table-measure-row"
        style="height: 0px; font-size: 0px;"
      >
        <td
          style="padding: 0px; border: 0px; height: 0px;"
        >
          <div
            style="height: 0px; overflow: hidden;"
          >
             
          </div>
        </td>
        <td
          style="padding: 0px; border: 0px; height: 0px;"
        >
          <div
            style="height: 0px; overflow: hidden;"
          >
             
          </div>
        </td>
        <td
          style="padding: 0px; border: 0px; height: 0px;"
        >
          <div
            style="height: 0px; overflow: hidden;"
          >
             
          </div>
        </td>
      </tr>
      <tr
        class="ant-table-row ant-table-row-level-0"
        data-row-key="11600010"
      >
        <td
          class="ant-table-cell"
        >
          <div
            class="css-bwn97z"
          >
            <span
              class="ant-tag ant-tag-default pointer basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
            >
              database-1.table-1
            </span>
          </div>
        </td>
        <td
          class="ant-table-cell"
        >
          <div
            class="css-bwn97z"
          >
            <span
              class="ant-tag ant-tag-default pointer basic-tag-wrapper basic-default-tag-wrapper css-1mjwlcb css-dev-only-do-not-override-bj9uhl"
            >
              ALL
            </span>
          </div>
        </td>
        <td
          class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
          style="position: sticky; right: 0px;"
        >
          <div
            class="css-new95e"
          >
            <div
              class="ant-space css-dev-only-do-not-override-bj9uhl ant-space-horizontal ant-space-align-center"
            >
              <div
                class="ant-space-item"
                style="margin-right: 8px;"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-9n8g17 ant-btn-default ant-btn-sm actiontech-table-actions-button basic-button-wrapper css-geipcv"
                  type="button"
                >
                  <span>
                    编 辑
                  </span>
                </button>
              </div>
              <div
                class="ant-space-item"
              >
                <button
                  class="ant-btn css-dev-only-do-not-override-9n8g17 ant-btn-default ant-btn-sm ant-btn-dangerous actiontech-table-actions-button basic-button-wrapper css-geipcv"
                  type="button"
                >
                  <span>
                    删 除
                  </span>
                </button>
              </div>
            </div>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`provision/CreateRole render init snap 1`] = `
<div>
  <section
    class="css-doq0dk"
  >
    <div
      class="actiontech-page-header-namespace fixed-style css-1xspr0w"
    >
      <div
        class="title"
      >
        <button
          class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
          type="button"
        >
          <span
            class="ant-btn-icon"
          >
            <svg
              height="16"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.219 7.333h8.114v1.334H5.22l3.576 3.576-.943.942L2.667 8l5.185-5.185.943.942z"
                fill="currentColor"
              />
            </svg>
          </span>
          <span>
            返回至角色列表
          </span>
        </button>
      </div>
      <div
        class="extra"
      >
        <div
          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 8px;"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
              type="button"
            >
              <span>
                重 置
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
              type="button"
            >
              <span>
                提 交
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="lazy-load-wrapper lazy-load-wrapper-show css-952l0m"
    >
      <form
        class="ant-form ant-form-horizontal css-dev-only-do-not-override-txh9fw hasTopHeader css-19jfn7e"
      >
        <section
          class="css-bspaai"
        >
          <h3
            class="ant-typography css-p50odb css-dev-only-do-not-override-txh9fw"
          >
            创建角色
          </h3>
          <div
            class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required ant-form-item-no-colon"
                  for="dbServiceID"
                  title="数据源"
                >
                  数据源
                </label>
              </div>
              <div
                class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-single ant-select-show-arrow ant-select-disabled"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <span
                          class="ant-select-selection-search"
                        >
                          <input
                            aria-activedescendant="dbServiceID_list_0"
                            aria-autocomplete="list"
                            aria-controls="dbServiceID_list"
                            aria-expanded="false"
                            aria-haspopup="listbox"
                            aria-owns="dbServiceID_list"
                            aria-required="true"
                            autocomplete="off"
                            class="ant-select-selection-search-input"
                            disabled=""
                            id="dbServiceID"
                            readonly=""
                            role="combobox"
                            style="opacity: 0;"
                            type="search"
                            unselectable="on"
                            value=""
                          />
                        </span>
                        <span
                          class="ant-select-selection-item"
                          title="oracle-1 (10.186.62.3:33061)"
                        >
                          oracle-1 (10.186.62.3:33061)
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw ant-form-item-hidden"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      class="ant-input css-dev-only-do-not-override-ywkr0o basic-input-wrapper css-1pd1cd5"
                      id="dbType"
                      placeholder="请输入{{name}}"
                      type="text"
                      value="Oracle"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item has-required-style css-1jlm9cy css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-required ant-form-item-no-colon"
                  for="roleName"
                  title="角色名称"
                >
                  角色名称
                </label>
              </div>
              <div
                class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <input
                      aria-required="true"
                      class="ant-input css-dev-only-do-not-override-ywkr0o basic-input-wrapper css-1pd1cd5"
                      id="roleName"
                      placeholder="请输入{{name}}"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-no-colon"
                  for="dbRoles"
                  title="角色"
                >
                  角色
                </label>
              </div>
              <div
                class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-multiple ant-select-allow-clear ant-select-show-arrow ant-select-show-search"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <div
                          class="ant-select-selection-overflow"
                        >
                          <div
                            class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                            style="opacity: 1;"
                          >
                            <div
                              class="ant-select-selection-search"
                              style="width: 0px;"
                            >
                              <input
                                aria-activedescendant="dbRoles_list_0"
                                aria-autocomplete="list"
                                aria-controls="dbRoles_list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-owns="dbRoles_list"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="dbRoles"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                              <span
                                aria-hidden="true"
                                class="ant-select-selection-search-mirror"
                              >
                                 
                              </span>
                            </div>
                          </div>
                        </div>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          请选择{{name}}
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
              >
                <label
                  class="ant-form-item-no-colon"
                  for="systemPrivileges"
                  title="系统权限"
                >
                  系统权限
                </label>
              </div>
              <div
                class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x css-dev-only-do-not-override-v9sov3 ant-select-multiple ant-select-show-arrow ant-select-loading ant-select-show-search"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <div
                          class="ant-select-selection-overflow"
                        >
                          <div
                            class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                            style="opacity: 1;"
                          >
                            <div
                              class="ant-select-selection-search"
                              style="width: 0px;"
                            >
                              <input
                                aria-activedescendant="systemPrivileges_list_0"
                                aria-autocomplete="list"
                                aria-controls="systemPrivileges_list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-owns="systemPrivileges_list"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="systemPrivileges"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                              <span
                                aria-hidden="true"
                                class="ant-select-selection-search-mirror"
                              >
                                 
                              </span>
                            </div>
                          </div>
                        </div>
                        <span
                          class="ant-select-selection-placeholder"
                        >
                          请选择{{name}}
                        </span>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow ant-select-arrow-loading"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="loading"
                          class="anticon anticon-loading anticon-spin"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="loading"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="0 0 1024 1024"
                            width="1em"
                          >
                            <path
                              d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-1jlm9cy css-dev-only-do-not-override-txh9fw"
          >
            <div
              class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
            >
              <div
                class="ant-col ant-col-24 ant-form-item-control css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <section
                      class="css-1ov62z1"
                    >
                      <section
                        class="css-c4iiqr"
                      >
                        <span
                          class="privileges-field-title"
                        >
                          对象权限概览
                        </span>
                        <div
                          class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                        >
                          <div
                            class="ant-space-item"
                            style="margin-right: 8px;"
                          >
                            <button
                              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-dangerous basic-button-wrapper css-geipcv"
                              disabled=""
                              type="button"
                            >
                              <span>
                                清除所有对象权限
                              </span>
                            </button>
                          </div>
                          <div
                            class="ant-space-item"
                          >
                            <button
                              class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                              type="button"
                            >
                              <span>
                                添加对象权限
                              </span>
                            </button>
                          </div>
                        </div>
                      </section>
                      <div
                        class="ant-table-wrapper actiontech-table-namespace css-fxd6ka css-dev-only-do-not-override-bj9uhl"
                      >
                        <div
                          class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
                        >
                          <div
                            class="ant-spin-container"
                          >
                            <div
                              class="ant-table ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                            >
                              <div
                                class="ant-table-container"
                              >
                                <div
                                  class="ant-table-content"
                                  style="overflow-x: auto; overflow-y: hidden;"
                                >
                                  <table
                                    style="min-width: 100%; table-layout: auto;"
                                  >
                                    <colgroup>
                                      <col />
                                      <col />
                                      <col
                                        style="width: 164px;"
                                      />
                                    </colgroup>
                                    <thead
                                      class="ant-table-thead"
                                    >
                                      <tr>
                                        <th
                                          class="ant-table-cell"
                                          scope="col"
                                        >
                                          数据对象
                                        </th>
                                        <th
                                          class="ant-table-cell"
                                          scope="col"
                                        >
                                          操作权限
                                        </th>
                                        <th
                                          class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                          scope="col"
                                          style="position: sticky; right: 0px;"
                                        >
                                          操作
                                        </th>
                                      </tr>
                                    </thead>
                                    <tbody
                                      class="ant-table-tbody"
                                    >
                                      <tr
                                        aria-hidden="true"
                                        class="ant-table-measure-row"
                                        style="height: 0px; font-size: 0px;"
                                      >
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                        <td
                                          style="padding: 0px; border: 0px; height: 0px;"
                                        >
                                          <div
                                            style="height: 0px; overflow: hidden;"
                                          >
                                             
                                          </div>
                                        </td>
                                      </tr>
                                      <tr
                                        class="ant-table-placeholder"
                                      >
                                        <td
                                          class="ant-table-cell"
                                          colspan="3"
                                        >
                                          <div
                                            class="ant-table-expanded-row-fixed"
                                            style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                                          />
                                        </td>
                                      </tr>
                                    </tbody>
                                  </table>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </section>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </section>
      </form>
    </div>
  </section>
</div>
`;
